--- a/src/resource/views/admin/allCustomers.hbs
+++ b/src/resource/views/admin/allCustomers.hbs
@@ -10,14 +10,14 @@
       <option value=""></option>
     </select>
 
-    <a href="/admin/all-customers/customer/create" class="create-customer" id="create-customer">
+    <a href="/admin/all-customers/customer/create" class="create-btn" id="create-btn">
       <i class="fi fi-rr-user-add"></i>
       <p>Thêm Khách Hàng</p>
     </a>
   </div>
 
   <div class="table">
-    <table style="width:100%">
+    <table class="all-items">
       <thead>
         <tr>
           <td style="width: 5% ;"> STT            </td>
