--- a/src/resource/views/admin/allOrders.hbs
+++ b/src/resource/views/admin/allOrders.hbs
@@ -11,14 +11,14 @@
       <option value="done">Đã hoàn thành</option>
     </select>
 
-    <a href="/admin/all-orders/order/create" class="create-orders" id="create-orders">
+    <a href="/admin/all-orders/order/create" class="create-btn" id="create-btn">
       <i class="fi fi-rr-user-add"></i>
       <p>Thêm Đơn Hàng</p>
     </a>
   </div>
 
   <div class="table">
-    <table>
+    <table class="all-items">
       <thead>
         <tr>
           <td style="width: 5%"> STT            </td>
