--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -10,14 +10,14 @@
       <option value="makeup">Makeup</option>
     </select>
 
-    <a href="/admin/all-products/product/create" class="create-product" id="create-product">
+    <a href="/admin/all-products/product/create" class="create-btn" id="create-btn">
       <i class="fi fi-br-layer-plus"></i>
       <p>Thêm Sản Phẩm</p>
     </a>
   </div>
 
   <div class="table">
-    <table>
+    <table class="all-items">
       <thead>
         <tr>
           <td style="width:  5%">STT     </td>
@@ -74,7 +74,7 @@
   </span>
 </div>
 
-<form name="delete-form" method="post"></form>
+<form style="display: none;" name="delete-form" method="post"></form>
 
 <script>
   // display delete confirmation box
