--- a/src/resource/views/admin/allPurchases.hbs
+++ b/src/resource/views/admin/allPurchases.hbs
@@ -10,14 +10,14 @@
       <option value=""></option>
     </select>
 
-    <a href="/admin/all-purchases/purchase/create" class="create-purchases" id="create-purchases">
+    <a href="/admin/all-purchases/purchase/create" class="create-btn" id="create-btn">
       <i class="fi fi-rr-user-add"></i>
       <p>Thêm Đơn Nhập</p>
     </a>
   </div>
 
   <div class="table">
-    <table style="width:100%">
+    <table class="all-items">
       <thead>
         <tr>
           <td style="width: 5% ;"> STT           </td>
