--- a/src/resource/views/admin/allStores.hbs
+++ b/src/resource/views/admin/allStores.hbs
@@ -10,14 +10,14 @@
       <option value=""></option>
     </select>
 
-    <a href="/admin/all-stores/store/create" class="create-stores" id="create-stores">
+    <a href="/admin/all-stores/store/create" class="create-btn" id="create-btn">
       <i class="fi fi-rr-user-add"></i>
       <p>Thêm Cửa Hàng</p>
     </a>
   </div>
 
   <div class="table">
-    <table>
+    <table class="all-items">
       <thead>
         <tr>
           <td> STT            </td>
