--- a/src/resource/views/admin/createOrder.hbs
+++ b/src/resource/views/admin/createOrder.hbs
@@ -4,23 +4,9 @@
       <p>Thêm đơn hàng mới</p>
     </div>
 
-    <div class="form-group">
-      <select name="categories">
-        <option value="">-- Thêm sản phẩm --</option>
-        <option value="skincare">Skincare</option>
-        <option value="makeup">Makeup</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <input type="text" class="form-control" id="brand" name="brand" placeholder="Hãng Sản Phẩm">
-      <span class="form-message"></span>
-    </div>
-
     <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
+      <button title="submit" type="submit">Tạo</button>
     </div>
-
   </form>
 </div>
 
