--- a/src/resource/views/admin/createProduct.hbs
+++ b/src/resource/views/admin/createProduct.hbs
@@ -6,7 +6,7 @@
 
     <div class="form-group">
       <select name="categories">
-        <option value="">-- Chọn Dòng Sản Phẩm --</option>
+        <option value="">-- Chọn dòng Sản Phẩm --</option>
         <option value="skincare">Skincare</option>
         <option value="makeup">Makeup</option>
       </select>
@@ -42,32 +42,38 @@
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="brand" name="brand" placeholder="Hãng Sản Phẩm">
+      <label for="brand">Hãng sản phẩm</label>
+      <input type="text" class="form-control" id="brand" name="brand" placeholder="VD: PRETTYSKIN">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Tên Sản phẩm">
+      <label for="name">Tên sản phẩm</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="VD: TINH CHẤT PHỤC HỒI, DƯỠNG TRẮNG HYDRA B5 MAX SERUM PRETTYSKIN">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="oldPrice" name="oldPrice" placeholder="Giá Cũ Sản Phẩm">
+      <label for="oldPrice">Giá sản phẩm (cũ)</label>
+      <input type="text" class="form-control" id="oldPrice" name="oldPrice" placeholder="VD: 1.000.000">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="price" name="price" placeholder="Giá Mới Sản Phẩm">
+      <label for="price">Giá sản phẩm (mới)</label>
+      <input type="text" class="form-control" id="price" name="price" placeholder="VD: 250.000">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="description" name="description" placeholder="Giới Thiệu Sản Phẩm">
+      <label for="description">Mô tả sản phẩm</label>
+      <input type="text" class="form-control" id="description" name="description" placeholder="TINH CHẤT PHỤC HỒI, DƯỠNG TRẮNG HYDRA B5 MAX SERUM PRETTYSKIN">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="details" name="details" placeholder="Chi tiết Sản Phẩm">
+      <label for="details">Chi tiết sản phẩm</label>
+      <input type="text" class="form-control" id="details" name="details" placeholder="Dưỡng ẩm chuyên sâu với axit Hyaluronic: Axit Hyaluronic giúp bổ sung độ ẩm...">
       <span class="form-message"></span>
     </div>
 
@@ -93,10 +99,10 @@
       <label>Ảnh Sản Phẩm</label>
       <input type="file" name="img" id="img"/>
     </div>
+
     <div class="submit-button">
       <button title="submit" type="submit">Đăng</button>
     </div>
-
   </form>
 </div>
 
