--- a/src/resource/views/admin/createPurchase.hbs
+++ b/src/resource/views/admin/createPurchase.hbs
@@ -1,6 +1,6 @@
 <div class="admin-create-purchase-container">
   <form id="form-1" method="post" action="/admin/all-purchases/purchase/created" enctype="multipart/form-data">
-    <p class="form-title">Thêm đơn nhập mới</p>
+    <div class="form-title"><p>Thêm đơn nhập mới</p></div> 
     <input type="text" placeholder="Nhập tên sản phẩm">
     <div class="products-match">
       {{#each products}}
