--- a/src/resource/views/admin/createStore.hbs
+++ b/src/resource/views/admin/createStore.hbs
@@ -5,22 +5,25 @@
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Tên cửa hàng">
+      <label for="name">Tên cửa hàng</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="VD: Bunny House Thanh Xuân">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ cửa hàng">
+      <label for="address">Địa chỉ cửa hàng</label>
+      <input type="text" class="form-control" id="address" name="address" placeholder="VD: Thanh Xuân, Hà Nội">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="details" name="details" placeholder="Thông tin cửa hàng">
+      <label for="details">Thông tin cửa hàng</label>
+      <input type="text" class="form-control" id="details" name="details" placeholder="VD: Cửa hàng to, rộng rãi với 500m2">
       <span class="form-message"></span>
     </div>
 
     <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
+      <button title="submit" type="submit">Tạo</button>
     </div>
   </form>
 </div>
