--- a/src/resource/views/admin/detailOrder.hbs
+++ b/src/resource/views/admin/detailOrder.hbs
@@ -1,5 +1,5 @@
 <div class="order-details-container">
-  <form method="POST" action="/admin/all-orders/order/updated/{{order._id}}?_method=PUT">
+  <form id="form-2" method="POST" action="/admin/all-orders/order/updated/{{order._id}}?_method=PUT">
     <table id="table-1">
       <thead>
         <tr>
@@ -74,7 +74,9 @@
       </tbody>
     </table>
 
-    <button type="submit">Cập nhật</button>    
+    <div class="submit-button">
+      <button title="submit" type="submit">Cập nhật</button>
+    </div>
   </form>     
 </div>
 
