--- a/src/resource/views/admin/trash.hbs
+++ b/src/resource/views/admin/trash.hbs
@@ -1,6 +1,6 @@
 <div class="admin-trash-products-container">
   <div class="board-title">
-      <p>Sản phẩm đã xoá: {{totalDeletedProduct}}</p>
+    <p>Sản phẩm đã xoá: {{totalDeletedProduct}}</p>
   </div>
 
   <div class="table">
@@ -69,8 +69,8 @@
   </div>
 </div>
 
-<form name="delete-form" method="post"></form>
-<form name="restore-form" method="get"></form>
+<form style="display: none" name="delete-form" method="post"></form>
+<form style="display: none" name="restore-form" method="get"></form>
 
 <script>
   // delete button
