--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -7,6 +7,7 @@
 @import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
+/* all pages */
 body {
   background-color: #FFDFDF;
   font-family: 'Roboto', sans-serif;
@@ -45,6 +46,256 @@ body {
   border-radius: 50%;
   animation: 1s reloader infinite linear;
 }
+.board-title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  p {
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    border: 2px solid #D1A6A6;
+    padding: 20px;
+  }
+}
+.filter-and-create {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .filter {
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #D1A6A6;
+  }
+  .create-btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: black;
+    text-decoration: none;
+    gap: 5px;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #D1A6A6;
+    padding: 10px;
+    p {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+  } 
+}
+input {
+  font-family: 'Roboto', sans-serif;
+  text-indent: 10px;
+  border-radius: 5px;
+  border: 1px solid #D1A6A6
+}
+input:focus {
+  outline: 1.5px solid #D1A6A6
+}
+button {
+  width: fit-content; 
+  height: 30px;
+  background-color: white;
+  color: #D1A6A6;
+  border: 1px solid #D1A6A6;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #D1A6A6;
+  color: white;
+}
+
+/* all items page */
+select, option {
+  width: fit-content;
+  height: 40px;
+  border: 1px solid #D1A6A6;
+  border-radius: 5px;
+  padding-left: 5px;
+}
+select:focus {
+  outline: 1.5px solid #D1A6A6
+}
+.table {
+  overflow-x: auto;
+  padding: 10px 0;
+  table.all-items {
+    width: 100%;
+    border-spacing: 0px 10px;
+    padding: 0px 5px;
+    background-color: #F0F0F0;
+    border-radius: 10px;
+    text-align: center;
+    thead {
+      background-color:#D1A6A6;
+      height: 50px;
+      a { text-decoration: none }
+    }
+    tbody {
+      tr {
+        background-color: white;
+        height: 50px;
+      }
+      tr:hover {
+        filter: brightness(80%);
+      }
+      img {
+        border-radius: 10px;
+        width: 40px;
+        aspect-ratio: 1/1;
+      }
+    }
+    td {text-align: center};
+    td:first-child {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+    td:last-child {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  }
+}
+.submit-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0 10px 0;
+}
+.pagination {
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  gap: 10px;
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 5px;
+    text-decoration: none;
+    width: 20px;
+    color: black;
+  }
+} 
+
+/* create item page */
+.admin-create-brand-container,
+.admin-create-customer-container, 
+.admin-create-employee-container,
+.admin-create-order-container,
+.admin-create-product-container,
+.admin-create-purchase-container,
+.admin-create-store-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  form#form-1 {
+    width: 100%;
+    border: 1px solid black;
+    padding: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: fit-content;
+    .form-title {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      p {
+        font-size: larger;
+        font-weight: bolder;
+        text-transform: uppercase
+      };
+    }
+    .form-group {
+      display: grid;
+      margin-top: 5px;
+      box-sizing: border-box;
+      gap: 5px;
+      padding: 5px 10px 5px 10px;
+      input[type="text"], input[type="password"] {
+        width: 100%;
+        height: 40px;
+        border: 1px solid #D1A6A6;
+        border-radius: 5px;
+        text-indent: 10px;
+      };
+    }
+  }
+}
+
+/* detail item page */
+.brand-details-container,
+.customer-details-container,
+.employee-details-container,
+.order-details-container,
+.product-details-container,
+.purchase-details-container,
+.store-details-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  form#form-2 {
+    width: 100%;
+    table {
+      width: 100%;
+      border-spacing: 0px 10px;
+      thead {
+        background-color: #D1A6A6;
+        height: 50px;
+        font-weight: bolder;
+        text-align: center;
+      }
+      tbody {
+        td {
+          height: fit-content;
+          border-bottom: 1px solid black;
+          padding: 10px;
+          label {
+            padding: 5px;
+            border-radius: 5px;
+            cursor: pointer;
+          }
+          input {
+            display: none;
+          }
+        }
+      }
+    }
+    #table-1 {
+      tbody {
+        tr:last-child {
+          td:last-child {
+            display: grid;
+            gap: 10px;
+          }
+        }
+      }
+    }
+    #table-2 {
+      tbody {
+        td:nth-child(1) {
+          p {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            line-clamp: 2; 
+            -webkit-box-orient: vertical;
+            margin-block-start: 0px !important;
+            margin-block-end: 0px !important;
+          }
+        }
+      }
+    }
+  }
+}
+
 @keyframes reloader {
   to { transform: rotate(360deg); }
 }
