--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -47,10 +47,40 @@ body {
   background-color: white;
   color: black;
 }
-.tippy-tooltip.tomato-theme[data-placement^='top'] .tippy-arrow {border-top-color: #FFDFDF;}
-.tippy-tooltip.tomato-theme[data-placement^='bottom'] .tippy-arrow {border-bottom-color: #FFDFDF;}
-.tippy-tooltip.tomato-theme[data-placement^='left'] .tippy-arrow {border-left-color: #FFDFDF;}
-.tippy-tooltip.tomato-theme[data-placement^='right'] .tippy-arrow {border-right-color: #FFDFDF;}
+.tippy-tooltip.tomato-theme[data-placement^='top'] .tippy-arrow {border-top-color: #FFDFDF}
+.tippy-tooltip.tomato-theme[data-placement^='bottom'] .tippy-arrow {border-bottom-color: #FFDFDF}
+.tippy-tooltip.tomato-theme[data-placement^='left'] .tippy-arrow {border-left-color: #FFDFDF}
+.tippy-tooltip.tomato-theme[data-placement^='right'] .tippy-arrow {border-right-color: #FFDFDF}
+input {
+  font-family: 'Roboto', sans-serif;
+  text-indent: 10px;
+  border-radius: 5px;
+  border: 1px solid #D1A6A6
+}
+input:focus {
+  outline: 1.5px solid #D1A6A6
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  width: 100%;
+  button {
+    width: 150px; 
+    height: 30px;
+    background-color: white;
+    color: #D1A6A6;
+    border: 1px solid #D1A6A6;
+    border-radius: 5px;
+    cursor: pointer;
+  };
+  button:hover {
+    background-color: #D1A6A6;
+    color: white;
+    border: 1px solid white ;
+  }
+}
 @keyframes reloader {
   to { transform: rotate(360deg)}
 }
