--- a/src/public/css/user/detailProduct.css
+++ b/src/public/css/user/detailProduct.css
@@ -102,6 +102,7 @@
     .button {
       display: flex;
       align-items: center;
+      justify-content: start;
       gap: 5px;
       a { text-decoration: none }
       .add-to-cart, .buy-now, .out-of-order {
