--- a/src/public/css/user/detailRateOrder.css
+++ b/src/public/css/user/detailRateOrder.css
@@ -4,6 +4,10 @@
   justify-content: center;
   form {
     width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   table {
     width: 100%;
@@ -19,10 +23,11 @@
     tbody {
       td {
         height: 50px;
-        border-bottom: 1px solid black;
         padding: 5px 0;
-        p {
-          margin-block-end: 1em;
+        p {margin-block-end: 1em}
+        input {
+          width: 100%;
+          min-height: 30px;
         }
       }
     }
