--- a/src/resource/views/admin/allBrands.hbs
+++ b/src/resource/views/admin/allBrands.hbs
@@ -10,14 +10,14 @@
       <option value=""></option>
     </select>
 
-    <a href="/admin/all-brands/brand/create" class="create-brands" id="create-brands">
+    <a href="/admin/all-brands/brand/create" class="create-btn" id="create-btn">
       <i class="fi fi-br-layer-plus"></i>
       <p>Thêm thương hiệu</p>
     </a>
   </div>
 
   <div class="table">
-    <table>
+    <table class="all-items">
       <thead>
         <tr>
           <td style="width:  5%">STT             </td>
@@ -54,7 +54,6 @@
       </tbody>
     </table>
   </div>
-
 
   <span class="pagination">
   </span>
