--- a/src/resource/views/admin/allEmployees.hbs
+++ b/src/resource/views/admin/allEmployees.hbs
@@ -10,14 +10,14 @@
       <option value="makeup">Makeup</option>
     </select>
 
-    <a href="/admin/all-employees/employee/create" class="create-employees" id="create-employees">
+    <a href="/admin/all-employees/employee/create" class="create-btn" id="create-btn">
       <i class="fi fi-br-layer-plus"></i>
       <p>Thêm nhân viên</p>
     </a>
   </div>
 
   <div class="table">
-    <table>
+    <table class="all-items">
       <thead>
         <tr>
           <td style="width:  5%">STT           </td>
