--- a/src/resource/views/admin/createBrand.hbs
+++ b/src/resource/views/admin/createBrand.hbs
@@ -5,37 +5,30 @@
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="brand" name="brand" placeholder="Hãng Sản Phẩm">
+      <label for="name">Tên thương hiệu</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="VD: Obagi">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Tên Sản phẩm">
+      <label for="description">Mô tả thương hiệu</label>
+      <input type="text" class="form-control" id="description" name="description" placeholder="VD: Obagi - dược mỹ phẩm hàng đầu trong việc điều trị ...">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="oldPrice" name="oldPrice" placeholder="Giá Cũ Sản Phẩm">
+      <label for="details">Chi tiết thương hiệu</label>
+      <input type="text" class="form-control" id="details" name="details" placeholder="VD: Obagi là thương hiệu mỹ phẩm nổi tiếng của Mỹ, được các chuyên gia da liễu khuyên dùng ">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="price" name="price" placeholder="Giá Mới Sản Phẩm">
-      <span class="form-message"></span>
-    </div>
-
-    <div class="form-group">
-      <input type="text" class="form-control" id="description" name="description" placeholder="Giới Thiệu Sản Phẩm">
-      <span class="form-message"></span>
-    </div>
-
-    <div class="form-group">
-      <input type="text" class="form-control" id="details" name="details" placeholder="Chi tiết Sản Phẩm">
-      <span class="form-message"></span>
+      <label>Ảnh thương hiệu</label>
+      <input type="file" name="img" id="img"/>
     </div>
 
     <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
+      <button title="submit" type="submit">Tạo</button>
     </div>
   </form>
 </div>
@@ -69,20 +62,10 @@ function isRequiredString(selector) {
   }
 }
 
-// isRequiredNumber requires input must have number
-function isRequiredNumber(selector) {
-  return {
-    selector: selector,
-    test: function (value) {
-      return value > 0 ? undefined : 'Chưa Nhập Tiền Kìa =((('
-    }
-  }
-}
-
 // validator function to validate input form from user
 function validator(options) {
   var formElement = document.querySelector(options.form)
-  var checkValidate = Array(5).fill(false)
+  var checkValidate = Array(3).fill(false)
 
   options.rules.forEach(function (rule, index) {
     var inputElement = formElement.querySelector(rule.selector)
@@ -110,29 +93,9 @@ validator({
   form: '#form-1',
   errorSelector: '.form-message',
   rules: [
-    isRequiredString('#brand'),
     isRequiredString('#name'),
-    isRequiredNumber('#price'),
     isRequiredString('#description'),
     isRequiredString('#details'),
   ]
 })
-
-// skincare and makeup visibility
-var selectBox = document.querySelector('select[name="categories"]')
-var selectedValue = ''
-var skincareBox = document.querySelector('select[name="skincare"]').parentElement
-var makeUpBox = document.querySelector('select[name="makeup"]').parentElement
-
-selectBox.onchange = function() {
-  selectedValue = selectBox.options[selectBox.selectedIndex].value;
-  if (selectedValue === 'skincare') {
-    skincareBox.style.display = 'block'
-    makeUpBox.style.display = 'none'
-  }
-  if (selectedValue === 'makeup') {
-    skincareBox.style.display = 'none'
-    makeUpBox.style.display = 'block'
-  }
-}
 </script>
