--- a/src/resource/views/admin/createCustomer.hbs
+++ b/src/resource/views/admin/createCustomer.hbs
@@ -5,37 +5,43 @@
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Họ Tên">
+      <label for="name">Họ tên</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="VD: Mai Hồng Vũ">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+      <label for="email">Email</label>
+      <input type="text" class="form-control" id="email" name="email" placeholder="VD: mhv@gmail.com">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="phone" name="phone" placeholder="Số điện thoại">
+      <label for="phone">Số điện thoại</label>
+      <input type="text" class="form-control" id="phone" name="phone" placeholder="VD: 0987654321">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="address" name="address" placeholder="Địa chỉ">
+      <label for="address">Địa chỉ</label>
+      <input type="text" class="form-control" id="address" name="address" placeholder="VD: Hà Nội">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <input type="password" class="form-control" id="password" name="password" placeholder="Mật Khẩu">
+      <label for="password">Mật Khẩu</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="Aa">
       <span class="form-message"></span> 
     </div>
 
     <div class="form-group">
-      <input type="password" class="form-control" id="password-confirm" name="password-confirm" placeholder="Xác Nhận Mật Khẩu">
+      <label for="password-confirm">Xác Nhận Mật Khẩu</label>
+      <input type="password" class="form-control" id="password-confirm" name="password-confirm" placeholder="Aa">
       <span class="form-message"></span>
     </div>
 
     <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
+      <button title="submit" type="submit">Tạo</button>
     </div>
   </form>
 </div>
