--- a/src/resource/views/admin/detailStore.hbs
+++ b/src/resource/views/admin/detailStore.hbs
@@ -1,5 +1,5 @@
 <div class="store-details-container">
-  <form method="POST" action="/admin/order-updated/{{order._id}}?_method=PUT">
+  <form id="form-2" method="POST" action="/admin/all-stores/store/updated/{{storeInfo._id}}?_method=PUT">
     <table id="table-1">
       <thead>
         <tr>
@@ -37,8 +37,11 @@
         </td>
       </tr>
     </table>
-    <button type="submit">Cập nhật</button>    
-  </form>     
+
+    <div class="submit-button">
+      <button title="submit" type="submit">Cập nhật</button>
+    </div>
+  </form>
 </div>
 
 <script>
