--- a/src/resource/views/users/detailRateOrder.hbs
+++ b/src/resource/views/users/detailRateOrder.hbs
@@ -1,5 +1,5 @@
 <div class="detail-rate-order-container">
-  <form id="form-1" method="post" action="/all-orders/order/rate/rated" enctype="multipart/form-data">
+  <form id="form-1" method="post" action="/all-orders/order/rate/rated">
   <table>
     <thead>
       <tr>
@@ -11,14 +11,17 @@
       <tr>
         <td>
           <p>{{this.name}}</p>
-          <input type="text" placeholder="Nhập đánh giá của bạn" name="rate">
+          <input type="text" placeholder="Nhập đánh giá của bạn" id="productRate" name="productRate">
+          <input type="hidden" id="name" name="name" value="{{this.name}}">
         </td>
       </tr>
       {{/each}}
     </tbody>
   </table>
 
-  <button>Gửi</button>
+  <div class="button">
+    <button type="submit">Gửi</button>
+  </div>
 </div>
 
 <script>
