--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -2,7 +2,9 @@
     <form id="form-5">
         <h1>Hãy Nhập Mã Đơn Để Kiểm Tra Đơn Hàng Của Bạn Nhé !</h1>
         <input type="text" placeholder="Nhập Mã Đơn Hàng">
-        <button type="submit">Kiểm Tra</button>
+        <div class="button">
+            <button type="submit">Kiểm Tra</button>
+        </div>
         <span class="error-message"></span>
     </form>
 </div>
