--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -48,7 +48,7 @@
           <td>{{this.totalProduct}}</td>
           <td>{{this.totalProduct}}</td>
           <td class="total-revenue">{{this.totalRevenue}}</td>
-          <td><a href="/admin/all-brands/brand/{{this._id}}"><button>Xem</button></a></td>
+          <td><a href="/admin/all-brands/brand/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
       </tbody>
