--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -39,7 +39,7 @@
           <td>{{this.userInfo.address}}</td>
           <td>{{this.totalOrder}}</td>
           <td class="total-price">{{this.totalPrice}}</td>
-          <td><a href="/admin/all-customers/customer/{{this._id}}"><button>Xem</button></a></td>
+          <td><a href="/admin/all-customers/customer/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
       </tbody>
