--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -41,7 +41,7 @@
           <td>{{this.userInfo.address}}</td>
           <td>{{this.loginInfo.role}}</td>
           <td>{{this.userInfo.storeId}}</td>
-          <td><a href="/admin/all-employees/employee/{{this._id}}"><button>Xem</button></a></td>
+          <td><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
       </tbody>
