--- a/src/resource/views/admin/all/product.hbs
+++ b/src/resource/views/admin/all/product.hbs
@@ -48,7 +48,7 @@
           <td id="product-price">{{this.price}}</td>
           <td id="product-quantity">{{this.quantity}}</td>
           <td>
-            <a href="/admin/all-products/product/{{this._id}}" class="update-button"><button>Chi tiết</button></a>
+            <a href="/admin/all-products/product/{{this._id}}" class="update-button">Xem</a>
             <button id="{{this._id}}" name="{{this.name}}" onclick="reply_click(this.id, this.name)">Xoá</button> 
           </td>
         </tr>
