--- a/src/public/css/empty/signIn.css
+++ b/src/public/css/empty/signIn.css
@@ -1,10 +1,10 @@
-.sign-in-container {
+.sign-up-container, .sign-in-container {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  .sign-in-form {
+  .sign-up-form, .sign-in-form {
     display: flex;
     align-items: center;
     position: absolute;
@@ -32,7 +32,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 5px;
+        gap: 10px;
         input {
           width: 80%;
           height: 40px;
@@ -72,14 +72,21 @@
           border: 1px solid white ;
           border-color: #D1A6A6;
         }
-      }
-      .other-login-methods, .other-login-methods-logo {
-        justify-self: center;
-        padding: 5px;
-      }
-      .other-login-methods-logo {
-        i {
-          font-size: 30px;
+      } 
+      .sign-in {
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        p {
+          font-size: 13px;
+          margin-block-start: 0;
+          margin-block-end: 0;
+          font-style: italic;
+          justify-self:end
+        }
+        p:hover {
+          text-decoration: underline;
         }
       }
       .sign-up {
@@ -111,7 +118,7 @@
   }
 }
 @media screen and (max-width: 700px) {
-  .sign-in-form {
+  .sign-up-form, .sign-in-form {
     flex-direction: column;
     top: 0 !important;
     left: 0 !important;
@@ -119,7 +126,7 @@
     transform: none !important;
     border: none !important;
     box-shadow: none !important;
-    img { width: 100% !important; }
+    img { width: 100% !important;}
     .form-input {
       width: 100% !important;
       padding: 5px;
