--- a/src/public/css/user/allOrders.css
+++ b/src/public/css/user/allOrders.css
@@ -25,35 +25,24 @@
       text-align: center;
     }
     table {
-      width: 100%;
-      border-spacing: 0px 10px;
-      padding: 0px 10px;
-      thead, tfoot {
+      tfoot {
         background-color: #D1A6A6;
         height: 50px;
         font-weight: bolder;
       }
       tbody {
-        td {
-          height: 100px;
-          border-bottom: 1px solid black;
-          padding: 5px;
+        td {height: 100px}
+        .delete-button {cursor: pointer}
+        img {
+          width: 75px;
+          aspect-ratio: 1/1;
         }
-        td:nth-child(2) {
-          text-align: start;
+        a { 
+          text-decoration: none; 
+          color: black;
+          padding-left: 0 !important;
+          border: none;
         }
-        .delete-button {
-          cursor: pointer;
-        }
-      }
-      img {
-        width: 75px;
-        aspect-ratio: 1/1;
-      }
-      a { 
-        text-decoration: none; 
-        color: black;
-        padding-left: 0 !important;
       }
     }
   }
