--- a/src/public/css/user/profile.css
+++ b/src/public/css/user/profile.css
@@ -99,38 +99,7 @@
         color: white;
         border: 1px solid white ;
       }
-    }
-    table {
-      width: 100%;
-      border-spacing: 0px 10px;
-      padding: 0px 10px;
-      text-align: center;
-      th {
-        background-color:#D1A6A6;
-        height: 50px;
-        text-align: center;
-        a { text-decoration: none };
-        i { color: black }
-      }
-      tr {
-        background-color:#F0F0F0;
-        height: 50px;
-        td {
-          text-align: center;
-        }
-        td:first-child {
-          border-top-left-radius: 10px;
-          border-bottom-left-radius: 10px;
-        }
-        td:last-child {
-          border-top-right-radius: 10px;
-          border-bottom-right-radius: 10px;
-        }
-        a { text-decoration: none; color: black; font-weight: bolder;}
-      }
-      tr:hover {
-        filter: brightness(85%);
-      }
+      table {text-align: center;}
     }
   }
 }
