--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -38,7 +38,7 @@
           <td>{{this.address}}</td>
           <td class="revenue">{{this.revenue}}</td>
           <td>
-            <a href="/admin/all-stores/store/{{this._id}}"><button>Xem</button></a>
+            <a href="/admin/all-stores/store/{{this._id}}">Xem</a>
           </td>
         </tr>
         {{/each}}
