--- a/src/resource/views/admin/detail/brand.hbs
+++ b/src/resource/views/admin/detail/brand.hbs
@@ -2,50 +2,51 @@
   <form id="form-2" method="POST" action="/admin/all-brands/brand/updated/{{brandInfo._id}}?_method=PUT">
     <table id="table-1">
       <thead>
-        <tr>
-          <td colspan="2"> THÔNG TIN THƯƠNG HIỆU </td>
-        </tr>
+        <tr><td colspan="2">THÔNG TIN THƯƠNG HIỆU</td></tr>
       </thead>
       <tr>
-        <td> Mã thương hiệu </td>
-        <td> {{brandInfo._id}} </td>
+        <td>Mã thương hiệu</td>
+        <td>{{brandInfo._id}}</td>
       </tr>
       <tr>
-        <td> Tên thương hiệu </td>
-        <td> {{brandInfo.name}} </td>
+        <td>Tên thương hiệu</td>
+        <td>{{brandInfo.name}}</td>
       </tr>
       <tr>
-        <td> Số lượng sản phẩm </td>
-        <td> {{brandInfo.totalProduct}} </td>
+        <td>Số lượng sản phẩm</td>
+        <td>{{brandInfo.totalProduct}}</td>
       </tr>
       <tr>
-        <td> Tổng doanh thu </td>
-        <td id="total-revenue"> {{brandInfo.totalRevenue}} </td>
+        <td>Tổng doanh thu </td>
+        <td id="total-revenue">{{brandInfo.totalRevenue}}</td>
       </tr>
       <tr>
-        <td> Mô tả chi tiết </td>
-        <td> {{brandInfo.description}} </td>
+        <td>Mô tả chi tiết</td>
+        <td>{{brandInfo.description}}</td>
       </tr>
     </table>
 
     <table id="table-2">
       <thead>
+        <tr><td colspan="5">DANH SÁCH SẢN PHẨM</td></tr>
+      </thead>
+      <thead>
         <tr>
-          <td> STT          </td>
-          <td> Tên Sản Phẩm </td>
-          <td> Đơn Giá      </td>
-          <td> S/L          </td>
-          <td></td>
+          <td style="width:  5%">STT         </td>
+          <td style="width: 35%">Tên Sản Phẩm</td>
+          <td style="width: 25%">Đơn Giá     </td>
+          <td style="width: 25%">S/L         </td>
+          <td style="width: 10%">Chi tiết    </td>
         </tr>
       </thead>
       <tbody>
         {{#each productsInfo}}
         <tr>
           <td>{{addIndex @index 1}}</td>
-          <td><p>{{this.name}}</p>                                                     </td>
-          <td style="text-align: center;" id="product-price">      {{this.price}}      </td>
-          <td style="text-align: center;">                         {{this.quantity}}   </td>
-          <td><a href="/admin/all-products/product/{{this._id}}">Chi Tiết</a>          </td>
+          <td><p>{{this.name}}</p></td>
+          <td id="product-price">{{this.price}}</td>
+          <td>{{this.quantity}}</td>
+          <td><a href="/admin/all-products/product/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
       </tbody>
