--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -3,39 +3,53 @@
     <table id="table-1">
       <thead>
         <tr>
-          <td colspan="2"> THÔNG TIN CỬA HÀNG </td>
+          <td colspan="2">THÔNG TIN CỬA HÀNG</td>
         </tr>
       </thead>
       <tr>
-        <td> ID Cửa hàng </td>
-        <td> {{storeInfo._id}} </td>
+        <td>ID Cửa hàng</td>
+        <td>{{storeInfo._id}}</td>
       </tr>
       <tr>
-        <td> Tên cửa hàng </td>
-        <td> {{storeInfo.name}} </td>
+        <td>Tên cửa hàng</td>
+        <td>{{storeInfo.name}}</td>
       </tr>
       <tr>
-        <td> Địa chỉ cửa hàng </td>
-        <td> {{storeInfo.address}} </td>
+        <td>Địa chỉ cửa hàng</td>
+        <td>{{storeInfo.address}}</td>
       </tr>
       <tr>
-        <td> Mô tả chi tiết </td>
-        <td> {{storeInfo.details}} </td>
+        <td>Mô tả chi tiết</td>
+        <td>{{storeInfo.details}}</td>
       </tr>
       <tr>
-        <td> Doanh thu cửa hàng </td>
-        <td class="revenue"> {{storeInfo.revenue}} </td>
+        <td>Doanh thu cửa hàng</td>
+        <td class="revenue">{{storeInfo.revenue}}</td>
       </tr>
-      <tr>
-        <td> Danh sách nhân viên </td>
-        <td>
-          <ul>
-            {{#each employeesInfo}}
-            <li> {{this.userInfo.name}} </li>
-            {{/each}}
-          </ul>
-        </td>
-      </tr>
+    </table>
+
+    <table id="table-2">
+      <thead>
+        <tr><td colspan="4">DANH SÁCH NHÂN VIÊN</td></tr>
+      </thead>
+      <thead>
+        <tr>
+          <td>Mã nhân viên   </td>
+          <td>Tên nhân viên  </td>
+          <td>Vị trí làm việc</td>
+          <td>Chi tiết       </td>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each employeesInfo}}
+        <tr>
+          <td><p>{{this._id}}</p></td>
+          <td style="text-align: center;">{{this.userInfo.name}}</td>
+          <td style="text-align: center;">{{this.loginInfo.role}}</td>
+          <td style="text-align: center;"><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
+        </tr>
+        {{/each}}
+      </tbody>
     </table>
 
     <div class="submit-button">
