--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -172,10 +172,4 @@
   </div>
 </div>
 
-<script>
-  var totalRevenue = document.querySelector('td.totalRevenue')
-  var maxValueOrderNumber = document.querySelector('td.maxValueOrderNumber')
-
-  totalRevenue.innerText = totalRevenue.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'
-  maxValueOrderNumber.innerText = maxValueOrderNumber.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'
-</script>
+<script src="/js/admin/home.js" defer></script>
