--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -5,7 +5,7 @@
       <p class="form-title">Đăng nhập nhân viên</p>
       <form id="form-3" method="post" action="/emp/authentication/checking-account">
         <div class="form-group">
-          <input type="text" class="form-control" id="email" name="email" placeholder="Tài khoản">
+          <input type="text" class="form-control" id="email" name="email" placeholder="Email">
           <span class="form-message"></span>
         </div>
 
@@ -15,11 +15,8 @@
         </div>
 
         <div class="form-group">
-          <p class="wrong-info">
-          </p> 
-          <p class="forgot-password">
-            Quên mật khẩu ?
-          </p> 
+          <p class="wrong-info"></p> 
+          <p class="forgot-password">Quên mật khẩu ?</p> 
         </div>
 
         <div class="form-action">
@@ -31,84 +28,8 @@
   </div>
 </div>
 
-<script>  
-// 
-var wrongInfo = document.querySelector('p.wrong-info')
-if (`{{error}}`) {
-  wrongInfo.innerText = `{{error}}`
-  wrongInfo.style.color = 'red'
-}
-
-// executing validate
-function validating(inputElement, rule, checkValidate, index) {
-  var errorMessage = rule.test(inputElement.value)
-  var errorElement = inputElement.parentElement.querySelector('.form-message')
-
-  if (errorMessage) {
-    errorElement.innerText = errorMessage
-    inputElement.parentElement.style.color = "red"
-    checkValidate[index] = false
-  } else {
-    errorElement.innerText = ''
-    inputElement.parentElement.style.color = "black"
-    checkValidate[index] = true
-  }
-}  
-
-// isRequiredString requires input must have string
-function isRequiredString(selector) {  
-  return {
-    selector: selector,
-    test: function (value) {
-      return value.trim() ? undefined : 'Chưa nhập mật khẩu'
-    }
-  }
-}
-
-// isEmail requires input must be an email 
-function isEmail(selector) {
-  return {
-    selector: selector,
-    test: function (value) {
-      var regex = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/
-      return regex.test(value) ? undefined : 'Email nhập chưa đúng'
-    }
-  }
-}
-
-// validator function to validate input form from user
-function validator(options) {
-  var formElement = document.querySelector(options.form)
-  var checkValidate = Array(2).fill(false)
-
-  options.rules.forEach(function (rule, index) {
-    var inputElement = formElement.querySelector(rule.selector)
-    // input blur
-    inputElement.onblur = function () {
-      validating(inputElement, rule, checkValidate, index)
-    }
-  })
-
-  formElement.onsubmit = function (e) {
-    for (var i = 0; i < checkValidate.length; ++i) {
-      if(checkValidate[i] === false) {
-        e.preventDefault()
-        options.rules.forEach(function (rule, index) {
-          var inputElement = formElement.querySelector(rule.selector)
-          validating(inputElement, rule, checkValidate, index)
-        })
-        break
-      } 
-    }
-  }
-}
-
-validator({
-  form: '#form-3',
-  errorSelector: '.form-message',
-  rules: [
-    isEmail('#email'),
-    isRequiredString('#password'),
-  ]
-})
+<script defer>
+  var error = `{{error}}`
 </script>
+<script src="/js/checkInput.js" defer></script>
+<script src="/js/admin/signIn.js" defer></script>
