--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -21,47 +21,12 @@
     <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự</p></a>
     <a href="/admin/all-brands" class="sidebar-button" id="brands"><i class="fi fi-rr-supplier"></i></i></i><p>Đối tác</p></a>
     <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-rr-trash"></i><p>Kho</p></a>
-    <a href="/admin/profile" class="sidebar-button" id="update-profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
+    <a href="/admin/profile" class="sidebar-button" id="profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/admin/log-out" class="sidebar-button" id="log-out"><i class="fi fi-rr-exit"></i><p>Đăng Xuất</p></a>
   </div>
 </div>
 
-<script>
-  var currentTime = new Date().getHours()
-  var checkDay = ''
-  var homeButton          = document.querySelector('a#home-page')
-  var customersButton     = document.querySelector('a#customers')
-  var chatsButton         = document.querySelector('a#chats')
-  var purchaseButton      = document.querySelector('a#purchases')
-  var ordersButton        = document.querySelector('a#orders')
-  var storeButton         = document.querySelector('a#stores')
-  var employeesButton     = document.querySelector('a#employees')
-  var productsButton      = document.querySelector('a#products')
-  var brandsButton        = document.querySelector('a#brands')
-  var trashButton         = document.querySelector('a#trash')
-  var updateProfileButton = document.querySelector('a#update-profile')
-  var logOutButton        = document.querySelector('a#log-out')
+<script defer>
   var index = `{{index}}`;
-  const buttonMap = {
-    home            : homeButton,
-    customers       : customersButton,
-    chats           : chatsButton,
-    purchases       : purchaseButton,
-    orders          : ordersButton,
-    stores          : storeButton,
-    employees       : employeesButton,
-    products        : productsButton,
-    brands          : brandsButton,
-    trash           : trashButton,
-    "update-profile": updateProfileButton,
-  };
-  if (buttonMap[index]) buttonMap[index].style.backgroundColor = '#FFDFDF';
-
-  if      (currentTime <= 9) checkDay = 'buổi sáng'
-  else if (currentTime <= 14) checkDay = 'buổi trưa'
-  else if (currentTime <= 18) checkDay = 'buổi chiều'
-  else    checkDay = 'buổi tối'
-
-  var helloText = `Xin chào Quỳnh Ly, Chúc bạn một ${checkDay} vui vẻ !!!`
-  document.getElementById('welcome-text').innerHTML = helloText
 </script>
+<script src="/js/partials/adminSidebar.js" defer></script>
